--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -3,7 +3,7 @@
         <img class="logo" src="{{ .Site.BaseURL }}img/logo.png" alt="{{ .Site.Title }}">
     </a>
     <div class="sub-navigation">
-        <a href="#" class="main-navigation-link" id="about" data-scroll-goto="0">About</a>
+        <a href="#" class="main-navigation-link" id="about" data-scroll-goto="0">About Me</a>
         
         {{ if .Site.Params.process.enable }}
         <a href="#" class="main-navigation-link" data-scroll-goto="1">{{ .Site.Params.process.title }}</a>
