--- a/layouts/partials/process.html
+++ b/layouts/partials/process.html
@@ -1,8 +1,8 @@
 <section data-scroll-index="1">
     <div class="process">
         <div class="header">
-            <h1 class="title">{{ .Site.Params.Process.Title }}</h1>
-            <h2 class="subtitle">{{ .Site.Params.Process.Subtitle }}</h2>
+            <h1 class="title">How can I help you?</h1>
+            <h2 class="subtitle">Enhance your online presence with impactful copy</h2>
         </div>
         <div class="process-wrapper">
             {{ range $element := sort .Site.Data.process "weight" }}
