--- a/static/css/final.css
+++ b/static/css/final.css
@@ -201,7 +201,7 @@ section {
 }
 
 .hero-right p a {
-  color: #574cdd;
+  color: #000;
   text-decoration: underline;
 }
 
@@ -288,7 +288,7 @@ section {
 .process-item h3 {
   /* Discover: */
   font-size: 28px;
-  color: #5A54AF;
+  color: #EEBC40;
   letter-spacing: 0;
 }
 
@@ -340,7 +340,7 @@ section {
   border: solid 2px #E1E1E1;
   padding: 18px 0;
   text-align: center;
-  color: #574CDD;
+  color: #000;
   font-weight: 500;
   -webkit-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
@@ -391,7 +391,7 @@ section {
 
 .results-content hr {
   width: 30px;
-  border: 3px solid #5A54AF;
+  border: 3px solid #EEBC40;
 }
 
 .main-case-study img {
@@ -408,7 +408,7 @@ section {
   font-family: Roboto;
   font-weight: bold;
   font-size: 22px;
-  color: #5A54AF;
+  color: #EEBC40;
   letter-spacing: 0;
 }
 
@@ -505,7 +505,7 @@ section {
 }
 
 .content-case-study a {
-  color: #574cdd;
+  color: #000;
   text-decoration: underline;
 }
 
@@ -593,7 +593,7 @@ section {
 }
 
 .active {
-  color: #574CDD !important;
+  color: #000 !important;
   transition: 0.2s ease-in-out;
-  border-bottom: 3px solid #574CDD;
+  border-bottom: 3px solid #000;
 }
