--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -135,7 +135,7 @@
             </div>
             {{ if isset .Site.Params.Hero "resume" }}
             <a href="{{ .Site.BaseURL }}{{ .Site.Params.Hero.Resume }}" target="blank" class="download-resume" onclick="ga('send', {hitType: 'event',eventCategory: 'CTA',eventAction: 'download'});">
-                Download Resume</a>
+                Download My Resume</a>
             {{ end }}
         </div>
         <div class="hero-right">
